--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,12 @@
 {
     "name": "Teslascope Car Rotator",
     "description": "Gives the car image on teslascope.com a random rotation.",
-    "version": "1.0",
+    "version": "2.0",
     "manifest_version": 3,
     "content_scripts": [
       {
         "matches": ["https://teslascope.com/*"],
+        "css": ["spin.css"],
         "js": ["rotate-car.js"]
       }
     ]
